--- a/login.html
+++ b/login.html
@@ -51,14 +51,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown" href="#" id="navbardrop"
-                                    data-toggle="dropdown">Categorias</a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item nav-item" href="treatments.html">Productos 1</a>
-                                    <a class="dropdown-item" href="#">Productos 2</a>
-                                    <a class="dropdown-item" href="#">Productos 3</a>
-                                </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="productos.php">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contacto</a>
