--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/estilos.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,7 +69,7 @@
                             </form>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="javascript:login();">Iniciar
+                            <li><a class=" btn btn-primary my-2 my-sm-0 my-account-btn" href="javascript:login()">Iniciar
                                     Sesion</a>
                             </li>
                         </ul>
@@ -507,13 +508,83 @@
         </div>
         <!-- End Footer Wrapper -->
     </div>
+
+
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="titleModal">Iniciar sesíon</h4>
+                </div>
+                <div class="modal-body">
+
+                    <div class="form-group">
+                        <label for="usuario">Usuario</label>
+                        <input type="text" id="usuario" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="contrasena">Contraseña</label>
+                        <input type="password" id="contrasena" class="form-control" />
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-list" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-list " onclick="init()">Iniciar sesíon</button>
+                    <button type="button" class="btn btn-list">Registrarse</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- jquery latest version -->
     <script src="js/jquery.js"></script>
+
+    <!-- popper.min js -->
     <script src="js/popper.min.js"></script>
+
+    <!-- bootstrap.min js -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- ie10 viewport bug-workaround js -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- custom js -->
     <script src="js/custom.js"></script>
+
     <script>
         function login() {
+            $("#modal").modal("show");
+        }
+
+        function init() {
+            if ($("#usuario").val() == "") return alert("Por favor ingresar un usuario");
+            if ($("#contrasena").val() == "") return alert("Por favor ingresar una contraseña");
+            let obj = {
+                "usuario": $("#usuario").val(),
+                "contrasena": $("#contrasena").val(),
+                "action": "login"
+            }
+            $.ajax({
+                type: 'POST',
+                url: 'controllers/loginController.php',
+                data: obj,
+                success: function(data) {
+                    let result = JSON.parse(data);
+                    debugger;
+                    if (result == "") return alert("No se ah encotrado el usuario ingresado!!");
+
+                    if (result[0].tipo_usuario == '2') {
+                        if (parseInt(result[0].subtipo_usuario) == 1) window.location.href = 'views/domicilio/domicilio.php';
+                        else window.location.href = 'views/home/administracion.php';
+                    }
+                },
+                error: function() {
+                    alert("Error");
+                }
+            });
 
         }
     </script>
