--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="productos.php">Productos</a>
+                                <a class="nav-link" href="views/producto/productos.php">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">Contacto</a>
